--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.34.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.0",
-    "node-mocks-http": "^1.12.2",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1"
   }
