--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "playwright": "playwright test",
+    "test:api": "start-server-and-test prepare http://localhost:3000 playwright"
   },
   "dependencies": {
     "@types/jest": "^29.5.1",
