--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test:components": "jest",
     "playwright": "playwright test",
     "test:api": "start-server-and-test prepare http://localhost:3000 playwright"
   },
@@ -19,6 +20,8 @@
     "dayjs": "^1.11.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "isomorphic-fetch": "^3.0.0",
+    "msw": "^1.2.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "prettier": "^2.8.8",
@@ -31,7 +34,7 @@
     "@playwright/test": "^1.34.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "14.2.0",
+    "@testing-library/user-event": "^14.4.3",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1"
   }
