--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "test:components": "jest",
     "playwright": "playwright test",
-    "test:api": "start-server-and-test prepare http://localhost:3000 playwright"
+    "setup": "next build && next start",
+    "test:api": "start-server-and-test setup http://localhost:3000 playwright",
+    "test:ui": "jest"
   },
   "dependencies": {
     "@types/jest": "^29.5.1",
