--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "test:ui": "jest"
   },
   "dependencies": {
-    "@types/jest": "^29.5.1",
+    "@types/jest": "29.5.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "dayjs": "^1.11.7",
+    "dayjs": "1.11.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "isomorphic-fetch": "^3.0.0",
-    "msw": "^1.2.1",
+    "isomorphic-fetch": "3.0.0",
+    "msw": "1.2.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
-    "prettier": "^2.8.8",
+    "prettier": "2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "start-server-and-test": "^2.0.0",
+    "start-server-and-test": "2.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.34.3",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@playwright/test": "1.34.3",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/user-event": "14.4.3",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1"
   }
